[gd_scene load_steps=4 format=2]

[ext_resource path="res://screens/login_screen/LoginWindow.gd" type="Script" id=1]

[sub_resource type="GDScript" id=1]
script/source = "extends Control


signal scene_changed(scene_name)
onready var start_game_button = $CenterContainer/VBoxContainer/Button

func _on_Button_pressed():
	var password = $\"./PasswordEdit\".get_text()
	var username = $\"./UsernameEdit\".get_text()
	if (password == \"0000\" and username == \"aboba\"):
		print(\"suka\")
		emit_signal(\"scene_changed\", \"lobby\")
"

[sub_resource type="GDScript" id=2]
script/source = "extends LineEdit




func _on_LineEdit_text_entered(new_text):
	print(new_text)
	
"

[node name="LoginWindow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.847059 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 131.0
margin_top = 92.0
margin_right = 188.0
margin_bottom = 112.0
text = "submit"
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordEdit" type="LineEdit" parent="."]
margin_left = 109.0
margin_top = 34.0
margin_right = 211.0
margin_bottom = 58.0
script = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameEdit" type="LineEdit" parent="."]
margin_left = 110.0
margin_top = 7.0
margin_right = 212.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="text_entered" from="PasswordEdit" to="PasswordEdit" method="_on_LineEdit_text_entered"]
